fix z-index of bg-prompt (poll settings)

--- a/web/www/assets/styles.css
+++ b/web/www/assets/styles.css
@@ -710,6 +710,7 @@ body .body-section {
   justify-content: center;
   align-items: center;
   display: none;
+  z-index: 9999;
 }
 .prompt {
   position: relative;
